# maths-online-assistant

./: .gitignore  requirements.txt
.github/workflows/: rust.yml
backend/: .env  Cargo.toml  env.example
backend/src/: database.rs  lib.rs  main.rs  openai.rs  ratelimit.rs
config/: __init__.py  config.yaml  secrets.env
frontend/: package-lock.json
frontend/maths-online-app/: package-lock.json  package.json
frontend/maths-online-app/src/: App.css  App.tsx  index.css
frontend/maths-online-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend/maths-online-app/src-tauri/src/: lib.rs  request.rs  screenshot.rs  settings.rs
frontend/maths-online-app/src/components/: Explaination.css  Explaination.tsx  Header.css  Header.tsx  MathQuestionForm.css  MathQuestionForm.tsx  RequestTypeDropdown.css  RequestTypeDropdown.tsx  Settings.css  Settings.tsx  SolutionPanel.css  SolutionPanel.tsx  UploadBox.css  UploadBox.tsx
frontend/src-tauri/: tauri.conf.json
src/: debug.py  main.py  openai.py  screenshot.py
src/backend/: debug.py  main.py  openai.py  screenshot.py
src/backend/api/: api.py
src/backend/database/: __init__.py
src/shared/: screenshot.py
src/ui/: ui.py
tests/: information.txt  test_debug.py  test_openai.py  test_screenshot.py
utilities/: delete_items_in_workspace.py  information.txt  mouse-position.py  utility-requirements.txt
workspace/cache/: information.txt
workspace/logs/: information.txt
workspace/screenshots/: information.txt
workspace/screenshots/answers/: information.txt
workspace/screenshots/questions/: information.txt
(+1 files in other folders)
