[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.2"
axum = "0.8.4"
dotenv = "0.15.0"
serde = "1.0.219"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
